Revision history for SQL::Easy

0.01    2010-12-04
        * First public release

0.02    2010-12-11
        * Fixed dependences in Makefile.PL. Thank you, cpan author ANDK.
        * Now module check if the db connection alive and reconnet if needed.
          The idea (and a bit of code) has been taken from David Precious's
          module Dancer::Plugin::Database. Thank you, cpan author BIGPRESH.

0.03    2011-06-12
        * Quick and dirty .deb creation
        * Fixing utf8 work with mysql
        * Updated README and a small fix in pod

0.04    2011-09-16
        * new sub return_tsv_data()

0.05    2012-07-21
        * More accurate pod and small refactoring
        * Using croak insted of die
        * Moving to ExtUtils::MakeMaker from Module::Install

0.06    2013-02-22
        * Making all 'return_*' methods as deprecated.
        * Small imporvements in pod in tests

0.07    2013-06-21
        * Switched to Dist::Zilla

1.0.0   2013-09-01
        [Major]
        * Using SemVer for version numbers

        [Patch]
        * Added Perl 5.8 to be checked by Travis CI
        * Fixing travis

1.0.1   2014-02-03
        [Patch]
        * Added RaiseError. Now DBI dies in case of errors
        * Added CONTRIBUTORS section to POD and added Igor Sverdlov (HEAD, master)

NEXT
        [Major]
        * Removed deprecated methods 'return_*'
        * Constructor new() uses hash instead of hashref

        [Minor]
        * In pod using ' instead of "